--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^1.10.7",
+    "babel-plugin-styled-components": "1.11.0-0",
     "next": "9.4.4",
     "normalize.css": "^8.0.1",
     "react": "16.13.1",
