--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "9.4.4",
     "normalize.css": "^8.0.1",
     "react": "16.13.1",
+    "react-animations": "^1.0.0",
     "react-dom": "16.13.1",
     "react-tooltip": "^4.2.7",
     "styled-components": "^5.1.1"
